// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoundIcon 1`] = `
<div
  class="RoundIconstyles__Box-sc-5md3j7-0 iaWTsZ"
  color="seattle10"
>
  M
</div>
`;

exports[`RoundIcon w/ any props 1`] = `
<div
  class="RoundIconstyles__Box-sc-5md3j7-0 fdemmR className"
  color="seattle10"
  id="id"
  title="title"
>
  M
</div>
`;

exports[`RoundIcon w/ clickable 1`] = `
<div
  class="RoundIconstyles__Box-sc-5md3j7-0 fdemmR"
  color="seattle10"
>
  M
</div>
`;

exports[`RoundIcon w/ color 1`] = `
Array [
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 iaWTsZ"
    color="seattle10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 kFfeAv"
    color="seattle60"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 hmVEsl"
    color="oslo10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 kIlhMQ"
    color="oslo60"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 cBciza"
    color="miami10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 bTTacc"
    color="miami100"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 bFACqE"
    color="nice10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 bpNJkg"
    color="nice100"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 dOlcex"
    color="dubai10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 kQWfIq"
    color="dubai100"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 dUsOcC"
    color="paris10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 cWkWsF"
    color="paris100"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 kvIGWi"
    color="sochi10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 ddBWLi"
    color="sochi100"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 isYkHE"
    color="tokyo10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 ctiMJv"
    color="tokyo100"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 ejhMXC"
    color="dublin10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 iasWAa"
    color="dublin100"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 iRDuAn"
    color="bern10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 kZrwc"
    color="bern100"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 cxSGXr"
    color="manila10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 fXrRMZ"
    color="manila100"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 dKcLsd"
    color="tallin10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 grWbmP"
    color="tallin100"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 fLeagJ"
    color="seoul10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 jNQEJS"
    color="seoul100"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 fqFnZK"
    color="havana10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 llxRAQ"
    color="havana100"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 bCPafS"
    color="madrid10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 bIWIEF"
    color="madrid100"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 jZWFvA"
    color="porto10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 cOBBrA"
    color="porto100"
  >
    M
  </div>,
]
`;

exports[`RoundIcon w/ color and icon 1`] = `
Array [
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 iaWTsZ"
    color="seattle10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 kFfeAv"
    color="seattle60"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 hmVEsl"
    color="oslo10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 kIlhMQ"
    color="oslo60"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 cBciza"
    color="miami10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 bTTacc"
    color="miami100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 bFACqE"
    color="nice10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 bpNJkg"
    color="nice100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 dOlcex"
    color="dubai10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 kQWfIq"
    color="dubai100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 dUsOcC"
    color="paris10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 cWkWsF"
    color="paris100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 kvIGWi"
    color="sochi10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 ddBWLi"
    color="sochi100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 isYkHE"
    color="tokyo10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 ctiMJv"
    color="tokyo100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 ejhMXC"
    color="dublin10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 iasWAa"
    color="dublin100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 iRDuAn"
    color="bern10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 kZrwc"
    color="bern100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 cxSGXr"
    color="manila10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 fXrRMZ"
    color="manila100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 dKcLsd"
    color="tallin10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 grWbmP"
    color="tallin100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 fLeagJ"
    color="seoul10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 jNQEJS"
    color="seoul100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 fqFnZK"
    color="havana10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 llxRAQ"
    color="havana100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 bCPafS"
    color="madrid10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 bIWIEF"
    color="madrid100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 jZWFvA"
    color="porto10"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 cOBBrA"
    color="porto100"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        clip-rule="evenodd"
        d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
        fill-rule="evenodd"
      />
      <path
        d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
      />
    </svg>
  </div>,
]
`;

exports[`RoundIcon w/ icon 1`] = `
<div
  class="RoundIconstyles__Box-sc-5md3j7-0 iaWTsZ"
  color="seattle10"
>
  <svg
    fill="currentColor"
    height="20"
    viewBox="0 0 24 24"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <defs />
    <path
      clip-rule="evenodd"
      d="M12 2a5 5 0 100 10 5 5 0 000-10zM9 7a3 3 0 116 0 3 3 0 01-6 0z"
      fill-rule="evenodd"
    />
    <path
      d="M12 13c-5.41 0-8.5 4.598-8.5 9h2c0-3.598 2.473-7 6.5-7s6.5 3.402 6.5 7h2c0-4.402-3.09-9-8.5-9z"
    />
  </svg>
</div>
`;

exports[`RoundIcon w/ size 1`] = `
Array [
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 hyyaOp"
    color="seattle10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 ejGWTf"
    color="seattle10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 iaWTsZ"
    color="seattle10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 cauzps"
    color="seattle10"
  >
    M
  </div>,
  <div
    class="RoundIconstyles__Box-sc-5md3j7-0 dEYzYx"
    color="seattle10"
  >
    M
  </div>,
]
`;
